Fix: Overflow en la pantalla de login
El fix se había aplicado anteriormente, pero surgieron problemas con otras resoluciones de pantalla.
- Cambio de la altura de la imagen de pantalla
- Cambio de posición de la imagen del registro

--- a/src/app/components/login/login-mostrar/login-mostrar.component.css
+++ b/src/app/components/login/login-mostrar/login-mostrar.component.css
@@ -16,12 +16,13 @@ html, body {
 }
 
 .fondoTransparente {
-  margin-top: -8vh;
+  margin-top: -56px;
   /*Imagen transparente de fondo*/
   background-image: url("src\assets\loginImage.jpg");
   background-size: cover;
   min-width: 100%;
-  min-height: 100%;
+  /*min-height: 100%;*/
+  height: 100vh;
   opacity: 0.5;
   mix-blend-mode: multiply;
 }
